# Hologramassistant-Backend

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  jenkinsfile  manage.py  pyproject.toml  setup.sh
HologramassistantBackend/: asgi.py  settings.py  urls.py  wsgi.py
Nginx/: django.conf
api/: views.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
utils/AI/: Wit.py
utils/Knowledge/: geolocation.py  knowledgeGoogle.py  main.py  nlg.py
utils/TextToSpeech/: textToSpeech.py
